added docker containers, postgress db & created the main tables

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,5 +5,7 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "ConnectionString": "server=database;port=5432;userid=postgres;database=checkoutdb;password=password;",
+  "ConnectionString_local": "server=127.0.0.1;port=5432;userid=postgres;database=checkoutdb;password=password;"
 }
